test/Fail/Issue7346.err
Issue7346.agda:25.1-26.53: error: [TerminationIssue]
Termination checking failed for the following functions:
  not-suc
Problematic calls:
  not-suc x (all-sucs x)
    (at Issue7346.agda:26.31-38)
